--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clipboard": "1.7.1",
     "codemirror": "5.39.2",
     "connect": "3.6.6",
+    "crypto-js": "^3.1.9-1",
     "driver.js": "0.5.2",
     "dropzone": "5.2.0",
     "echarts": "4.1.0",
